crates/services/mde-voice-config/src/snapshots/mde_voice_config__tests__dispatcher.list.snap
---
source: crates/mde-voice-config/src/lib.rs
expression: set.dispatcher_list
---
# Generated by mde-voice-config
# File: dispatcher.list
# Node: alice-laptop
# Mesh bind: 192.168.42.7 on nebula1
# Edit the voice_mesh / voice_public policies instead of this file.

# format: setid destination [flags [priority [attrs [body]]]]
# One row per remote peer in the voice_mesh policy.
# setid 1 = mesh peers; flags 0; priority 0; attrs carry
# the operator-visible identity so kamcmd dispatcher.list
# reads usefully.

# (no peers — empty voice_mesh policy)
