crates/services/mde-voice-config/src/snapshots/mde_voice_config__tests__kamailio.cfg.snap
---
source: crates/mde-voice-config/src/lib.rs
expression: set.kamailio_cfg
---
#!KAMAILIO
#
# Generated by mde-voice-config
# File: kamailio.cfg
# Node: alice-laptop
# Mesh bind: 192.168.42.7 on nebula1
# Edit the voice_mesh / voice_public policies instead of this file.

##### --- global parameters -----------------------------------
debug=2
log_stderror=no
log_facility=LOG_LOCAL0
server_header="Server: kamailio-mde"
user_agent_header="User-Agent: kamailio-mde"
memdbg=5
memlog=5
/* socket binding — loopback (UDP) for the embedded PJSIP
* client + Nebula (TLS) for inter-peer mesh signaling */
listen=udp:127.0.0.1:5060 advertise 127.0.0.1:5060
listen=tls:192.168.42.7:5061 advertise 192.168.42.7:5061
tcp_connection_lifetime=3604
tcp_async=yes
tcp_max_connections=2048
/* mode-of-operation: stateful proxy + record-route */
children=4

##### --- module loading --------------------------------------
loadmodule "jsonrpcs.so"
loadmodule "kex.so"
loadmodule "corex.so"
loadmodule "tm.so"
loadmodule "tmx.so"
loadmodule "sl.so"
loadmodule "rr.so"
loadmodule "pv.so"
loadmodule "maxfwd.so"
loadmodule "usrloc.so"
loadmodule "registrar.so"
loadmodule "textops.so"
loadmodule "siputils.so"
loadmodule "xlog.so"
loadmodule "sanity.so"
loadmodule "ctl.so"
loadmodule "cfg_rpc.so"
loadmodule "counters.so"
loadmodule "dispatcher.so"
loadmodule "uac.so"
loadmodule "rtpengine.so"
loadmodule "htable.so"
loadmodule "presence.so"
loadmodule "presence_xml.so"
loadmodule "msilo.so"
loadmodule "acc.so"
loadmodule "auth.so"
loadmodule "path.so"
loadmodule "tls.so"

##### --- module configuration --------------------------------
modparam("ctl", "binrpc", "unix:/var/run/kamailio-mde/kamcmd.sock")
modparam("jsonrpcs", "transport", 0)
modparam("jsonrpcs", "fifo_name", "/var/run/kamailio-mde/kamailio_rpc.fifo")
modparam("usrloc", "db_mode", 0)
modparam("registrar", "method_filtering", 1)
modparam("registrar", "max_contacts", 4)
modparam("dispatcher", "list_file", "/etc/kamailio-mde/dispatcher.list")
modparam("dispatcher", "flags", 2)
modparam("dispatcher", "force_dst", 1)
modparam("uac", "reg_db_url", "text:///etc/kamailio-mde/uacreg.list")
modparam("uac", "reg_contact_addr", "127.0.0.1:5060")
modparam("uac", "reg_timer_interval", 60)
modparam("rtpengine", "rtpengine_sock", "unix:/var/run/rtpengine-mde/ng.sock")
modparam("rtpengine", "rtpengine_tout_ms", 1000)
modparam("acc", "log_flag", 1)
modparam("acc", "log_missed_flag", 2)
modparam("tls", "config", "/etc/kamailio-mde/tls.cfg")

##### --- request routing -------------------------------------
request_route {
/* sanity + max-forwards + record-route housekeeping */
if (!mf_process_maxfwd_header("10")) {
sl_send_reply("483", "Too Many Hops");
exit;
}
if (!sanity_check("17895", "7")) {
xlog("L_INFO", "sanity failed for $rm $ru\n");
exit;
}
/* OPTIONS keepalive — VV-7a's Backend panel polls
* this to confirm the daemon is alive. */
if (is_method("OPTIONS") && uri==myself) {
sl_send_reply("200", "OK");
exit;
}
/* REGISTER from the embedded PJSIP client — VV-1
* stores the binding so the dialog plane can find
* the local endpoint. */
if (is_method("REGISTER")) {
if (!save("location")) {
sl_reply_error();
}
exit;
}
/* VV-2 inserts the mesh + Vitelity routes here.
* VV-1 ships a clean 503 so misdirected INVITEs
* fail fast rather than getting silently dropped. */
record_route();
sl_send_reply("503", "VV-1 baseline — mesh + Vitelity routes land in VV-2/VV-4/VV-14");
exit;
}
