crates/services/mde-voice-config/src/snapshots/mde_voice_config__tests__populated.uacreg.list.snap
---
source: crates/mde-voice-config/src/lib.rs
expression: set.uacreg_list
---
# Generated by mde-voice-config
# File: uacreg.list
# Node: alice-laptop
# Mesh bind: 192.168.42.7 on nebula1
# Edit the voice_mesh / voice_public policies instead of this file.

# format: l_uuid l_username l_domain r_username r_domain realm
#         auth_username auth_password auth_proxy expires flags reg_delay
# One row per peer's Vitelity sub-account in the
# voice_public policy. VV-13's Workbench panel writes
# the credentials; we generate the binding here.

alice-laptop mde-local 127.0.0.1 mde-alice-laptop out.vitelity.net out.vitelity.net mde-alice-laptop vit3lity-s3cret sip:out.vitelity.net:5061;transport=tls 3600 0 0
# outbound CID for this trunk: 15551234567
