crates/services/mde-voice-config/src/snapshots/mde_voice_config__tests__rtpengine.conf.snap
---
source: crates/mde-voice-config/src/lib.rs
expression: set.rtpengine_conf
---
; Generated by mde-voice-config
; File: rtpengine.conf
; Node: alice-laptop
; Mesh bind: 192.168.42.7 on nebula1
; Edit the voice_mesh / voice_public policies instead of this file.

[rtpengine]
interface = lo/127.0.0.1;mesh/192.168.42.7
listen-ng = /var/run/rtpengine-mde/ng.sock
port-min = 30000
port-max = 40000
log-level = 5
log-facility = local1
log-stderr = false
pidfile = /var/run/rtpengine-mde/rtpengine.pid
foreground = true
no-fallback = false
delete-delay = 30
timeout = 60
silent-timeout = 3600
; No transcoding — operator-locked 2026-05-24. The
; embedded PJSIP client negotiates PCMU when dialing
; PSTN; mesh-to-mesh stays Opus end-to-end.
codec-strip-default = false
